--- a/index.html
+++ b/index.html
@@ -19,7 +19,42 @@
     <h1>Portfolio</h1>
 
     <div class="container">
-      <div class="card card-profile-horizontal">
+      <!--<div class="card card-profile-horizontal">
+        <div class="image-side">
+          <img src="./images/rychillie.png" alt="rychillie" />
+        </div>
+        <div class="content">
+          <div class="content-header">
+            <div class="content-left">
+              <p class="name-card">Rychillie Umpierre de Oliveira</p>
+              <p class="work-area">Frontend Developer</p>
+            </div>
+            <div class="content-right">
+              <p class="contact-email">
+                <i class="material-icons">mail</i>
+                billy@example.com
+              </p>
+              <p class="contact-phone">
+                <i class="material-icons">phone</i>
+                (+603) 546 624 342
+              </p>
+            </div>
+          </div>
+          <div class="content-main">
+            <p>
+              Self-motivated developer, who is willing to learn and create
+              outstanding UI applications.
+            </p>
+            <br />
+            <p>
+              Donec aliquam est dui, vel vestibulum diam sollicitudin id.
+              Quisque feugiat malesuada molestie.
+            </p>
+          </div>
+        </div>
+      </div>-->
+
+      <div class="card card-profile-side">
         <div class="image-side">
           <img src="./images/rychillie.png" alt="rychillie" />
         </div>
@@ -54,38 +89,35 @@
         </div>
       </div>
 
-      <div class="card card-profile-side">
-        <div class="image-side">
-          <img src="./images/rychillie.png" alt="rychillie" />
-        </div>
-        <div class="content">
-          <div class="content-header">
-            <div class="content-left">
-              <p class="name-card">Rychillie Umpierre de Oliveira</p>
-              <p class="work-area">Frontend Developer</p>
-            </div>
-            <div class="content-right">
-              <p class="contact-email">
-                <i class="material-icons">mail</i>
-                billy@example.com
-              </p>
-              <p class="contact-phone">
-                <i class="material-icons">phone</i>
-                (+603) 546 624 342
-              </p>
-            </div>
-          </div>
-          <div class="content-main">
-            <p>
-              Self-motivated developer, who is willing to learn and create
-              outstanding UI applications.
-            </p>
-            <br />
-            <p>
-              Donec aliquam est dui, vel vestibulum diam sollicitudin id.
-              Quisque feugiat malesuada molestie.
-            </p>
-          </div>
+      <div class="card skills">
+        <div class="skills-header">Front end</div>
+        <div class="skills-content">
+          <ul class="list-skills">
+            <li class="skill">
+              <p>Javascript</p>
+              <div class="skill-container">
+                <div class="skill-value javascript"></div>
+              </div>
+            </li>
+            <li class="skill">
+              <p>CSS</p>
+              <div class="skill-container">
+                <div class="skill-value css"></div>
+              </div>
+            </li>
+            <li class="skill">
+              <p>React</p>
+              <div class="skill-container">
+                <div class="skill-value react"></div>
+              </div>
+            </li>
+            <li class="skill">
+              <p>GatsbyJS</p>
+              <div class="skill-container">
+                <div class="skill-value gatsbyjs"></div>
+              </div>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
